--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "node_modules/tdesign-vue-next/global.d.ts"
-  ],
+, "vite.config.mts"  ],
   "compileOnSave": false
 }
