--- a/package.json
+++ b/package.json
@@ -67,5 +67,21 @@
     "stylelint-order": "~6.0.1",
     "vite-plugin-mock": "^2.9.6",
     "vite-svg-loader": "^4.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,vue,ts,tsx}": [
+      "prettier --write",
+      "npm run lint:fix",
+      "git add ."
+    ],
+    "*.{html,vue,vss,sass,less}": [
+      "npm run stylelint:fix",
+      "git add ."
+    ]
   }
 }
